Uploaded image for project: 'Core Server'
  1. Core Server
  2. SERVER-71305

Legacy shard collection path waits on wrong opTime to be majority committed (5.0 and older)

    • Type: Icon: Bug Bug
    • Resolution: Fixed
    • Priority: Icon: Major - P3 Major - P3
    • 5.0.15
    • Affects Version/s: None
    • Component/s: Sharding
    • None
    • Fully Compatible
    • ALL
    • Sharding EMEA 2022-11-14, Sharding EMEA 2022-11-28
    • 55

      Similarly to SERVER-56556, the 4.4 legacy shard collection patch waits for majority write concern after creating the shard index.

      The problem is that if the index was already created no write will be performed , in this case the last op time on the current client could be a very old op time, associated with the last write performed by a previous operation.

            Assignee:
            pol.pinol@mongodb.com Pol Pinol
            Reporter:
            sergi.mateo-bellido@mongodb.com Sergi Mateo Bellido
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: