SERVER-71305 Legacy shard collection path waits on wrong opTime to be majority committed